--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ schedule==1.2.0
 requests==2.31.0
 python-dotenv==1.0.0
 pyyaml==6.0.1
+dotenv===0.0.5
 
 # YouTube and Google APIs
 youtube-transcript-api==0.6.1
