Add db and update schedule

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "feedparser==6.0.12",
     "colorlog==6.9.0",
     "psutil==7.1.0",
+    "aiosqlite==0.20.0",
 ]
 
 [build-system]
