--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,20 @@ YOUTUBE_API_KEY=your_youtube_api_key_here
 # Google Gemini API
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# Financial APIs (opcional)
-NEWS_API_KEY=your_news_api_key_here
-ALPHA_VANTAGE_KEY=your_alpha_vantage_key_here
+# =============================================================================
+# DATABASE CONFIGURATION
+# =============================================================================
+
+# Option 1: Use Supabase (PostgreSQL) - Recommended for production
+# Get your connection string from Supabase dashboard: Settings → Database
+DATABASE_URL=postgresql://postgres.[PROJECT-REF]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:6543/postgres
+
+# Enable Supabase (set to true to use PostgreSQL, false for SQLite)
+USE_SUPABASE=true
+
+# Option 2: Use SQLite (local file) - Good for development
+# SQLITE_DB_PATH=data/video_summary.db
+# USE_SUPABASE=false
 
 # Bot Configuration
 BOT_NAME=YouTube-Financial-Bot
