--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "google-generativeai==0.8.5",
     "feedparser==6.0.12",
     "pytz>=2024.0",
+    "psycopg2-binary>=2.9.9",
+    "sqlalchemy>=2.0.0",
 ]
 
 [build-system]
