--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@
 # Telegram Bot Configuration
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 TELEGRAM_CHAT_ID=your_chat_id_here
+BOT_PASSWORD=your_secure_password_here
 
 # YouTube API
 YOUTUBE_API_KEY=your_youtube_api_key_here
